resources/player.css
@import url(controls/controls.css);
@import url(primary.css);

/* SETTINGS (EMBED ONLY) */
.settings-embed {
    display:grid;
    background-color:rgba(0,0,0,0.4);
    grid-template-columns: 33% 33% 33%;
    width: 18.75vw;
    min-height:10vh;
    position:absolute;
    left:0;
    bottom:0.5%;
    color:white;
}

.option {
    background: none;
    margin:0.5em;
    padding:0.3em;
    cursor:pointer;
    transition: background-color 500ms;
    text-decoration: none;
}
.option img {
    transition: filter 500ms; 
    filter: invert(0);
}
.option p {
    font-family: SourceSansPro-Bold;
    font-size: 3.25vw;
    text-align:center;
    margin:0;
    padding:0;
    color:white;
    transition: color 500ms;
}

.option:hover {background-color: rgba(255, 255, 255, 0.9);}
.option:hover img {filter: invert(100%)}
.option:hover p {color:black;}

/* SIDE PANELS */
#controls, #about {
    position:absolute;
    background-color:rgba(0,0,0,0.6);
    width:0vw;
    left:0;
    top:0;
    font-size:1.8em;
    font-family:SourceSansPro;
    color:white;
    white-space: nowrap;
    transition: width 500ms;
    height:40vh;
    z-index:1999;
}
#controls span, #about span{display:none;margin-bottom:1vh;position:relative;font-size:1.25vw;}

.open-panel {
    width: 35vw !important;
    display:block;
    padding-top:2em;
    padding-bottom:2em;
    padding-left:1em;
    padding-right:1em;
}

.display-content span{display:block !important;}

/* STANDALONE PLAYER */
.data{
    position:absolute;
    top:100%;
    margin-left:7%;
    margin-right:7%;
    width:86%;
}

.data h1 {
    font-size:4.5em;
    color:black;
    margin:0;
    margin-bottom:0.2em;
}

article {
    width:85%;
    margin-left:7.5%;
    margin-right:7.5%;
    margin-top:0;
    margin-bottom:0;
    padding-left: 0.75em;
    padding-right:0.75em;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    border-top:0.18em solid black;
}
article:last-of-type{
    border-bottom:0.18em solid black;
}

.controls {
    zoom:95%;
    display:block;
    font-size:1.8em;
    font-family:SourceSansPro;
    color:black;
    white-space: pre;
}

/* EMBED */
#embed-link {
    position:fixed;
    top:-5%;
    left:50%;
    transform: translateX(-50%);
    height:0vw;
    width:30vw;
    transition: height 500ms;
    background-color:rgba(0,0,0,0.8);
    display:block;
    color:white !important;
    z-index:99;
    font-family: SourceSansPro;
    padding:1em;
}

#embed-link-span {
    position:absolute;
    text-decoration:underline;
    bottom:78%;
    cursor:pointer;
}

#embed-link-header {
    text-decoration:none;
    bottom:85%;
    position:absolute;
}

#embed-code {
    background-color:white;
    color:black;
    width:96.5%;
    margin-left:-1em;
    padding:1%;
    font-family:monospace;
    line-break: anywhere;
    bottom:37%;
    position:absolute;
    cursor:default;
}

#embed-code-header {
    text-decoration:none;
    bottom:57%;
    position:absolute;
}

#embed-copy {
    opacity:0;
    bottom:6.5%;
    left:3%;
    position:absolute;
    border:0.1em solid rgb(10, 235, 10);
    background-color: rgb(216, 253, 216);
    color:rgb(5, 138, 5);
    transition: opacity 500ms;
    padding:0.5em;
}

.open-embed {
    height:20vh !important;
    top:0 !important;
}

